--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,21 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  bloc: ^9.0.0
+  cloud_firestore: ^5.6.5
+  dartz: ^0.10.1
   firebase_core: ^3.12.1
+  firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  get_it: ^8.0.3
+  image_picker: ^1.1.2
+  meta: ^1.16.0
+  modal_progress_hud_nsn: ^0.5.1
+  path: ^1.9.1
+  skeletonizer: ^1.4.3
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_lints: ^5.0.0
