--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^9.0.0
+  cached_network_image: ^3.4.1
   cloud_firestore: ^5.6.5
   dartz: ^0.10.1
   firebase_core: ^3.12.1
